# microCam

./: .gitignore  CMakeLists.txt  README.md  README.rst  nrf52_adafruit_feather_nrf52832.overlay  prj.conf  sample.yaml
src/: ble_manager.c  main.c  spis_preinit.c
src/HM01B0/: HM01B0_BLE.c  HM01B0_BLE.h  HM01B0_CAPTURE.c  HM01B0_CAPTURE.h  HM01B0_CLK.c  HM01B0_CLK.h  HM01B0_I2C.c  HM01B0_I2C.h  HM01B0_SPI.c  HM01B0_SPI.h  HM01B0_UART.c  HM01B0_UART.h  HM01B0_def_values.h  other_cap.c
